syntax = "proto3";

package registration;

option go_package = "shapeup.registration.v1;usrcreatesvc";

service UserCreation {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Confirm (ConfirmRequest) returns (ConfirmResponse);
}

message RegisterRequest {
  string email = 1; // Email of the user to register
  string password = 2; // Password of the user to register
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user
}

message ConfirmRequest {
  string jwt = 1; // JWT to confirm account
}

message ConfirmResponse {
  int64 user_id = 1; // user_id of confirmed account
}


